--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
         	<div data-date="June 2014 – Present">
-                <h3>PaddleSoft/h3>
+                <h3>PaddleSoft</h3>
                 <h4>Founder</h4>
                 <p>
                     I founded PaddleSoft in order to help paddlers plan their whitewater adventures. Over the course of the last two years I have created many paddling related projects. Some of my favorites included using D3.js, NodeJS, and Kafka to build a <a href="http://rivermaps.herokuapp.com"> real time river flow map </a>, using Neo4j and CQL queries to to reccomend rivers and paddling partners to our users, and using MATLAB to create a time series neural network to predict the flow of the Kenduskeag stream. More details can be found below in the project section of this page and on the <a href="https://medium.com/@paddlesoft"> PaddleSoft blog </a>. All blog entries are written by myself unless otherwise noted.
@@ -121,7 +121,7 @@
         <h2 class="heading">Education</h2>
         <div class="education-block">
             <h3>Brandeis University</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
+            <span class="education-date">September 2013 - May 2017</span>
             <h4>Bachelor of Arts in Hispanic Studies</h4>
             <h4> Minors in Computer Science and Near Eastern and Judaic Studies</h4>
             <b> Relevant course work: </b>
@@ -155,7 +155,26 @@
                     Waves and Oscillations
                 </li>
             </ul>
-            <b> Extra cirriculurs </b>
+            <b> Extracurriculars </b>
+            <ul>
+            <li>
+                    Club President of Brazilian Jiu-Jitsu (2015-present)
+                </li>
+                <li>
+                    Founder/President Brandeis Whitewater Paddlers (2014-present)
+                </li>
+         
+                <li>
+                    Member Krav Maga (2013-present)
+                </li>
+                 <li>
+                    Brandeis Ice Hockey Club Member (2013-2016)
+                </li>
+                <li>
+                    Member Conservative/Libertarian club (2013-2015)
+                </li>
+
+                </ul>
         </div>
         <!-- End .education-block -->
 
@@ -174,11 +193,11 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Facebook Scraping and Analysis engine</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/isaacmg/fb_scraper">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -190,7 +209,7 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Kenduskeag Stream Flow Prediction/h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                         </p>
@@ -224,6 +243,7 @@
             <li>Amazon Web Services</li>
             <li>Git</li>
             <li>Docker</li>
+            <li>Jira</li>
             <li>Codecov</li>
         </ul>
         
@@ -267,7 +287,7 @@
                             <a href="http://stackoverflow.com/users/7452343/igodfried" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/isaac-godfried-70874466/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                         <li>
                             <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
