--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Isaac McKillen-Godfried</h1>
             <h2>Software Engineer and Data Scientist</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="/resume.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -73,7 +73,28 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I'm looking for opportunites in the areas of Software Engineering and Data Science. In particular, I'm interested in using machine learning and big data analytics to solve real world problems.
+                        I'm looking for opportunites in the areas of Software Engineering and Data Science. In particular, I'm interested in using machine learning and using big data analytics to solve real world problems. <br></br>
+
+                        <b> Background </b> 
+                        <br></br>
+
+                        I have an interesting variety of experience from mobile development with XCode and Objective-C in my high school days, to full-stack development with Ruby and Rails and NodeJS in my first few years of college, to large-scale data processing with Spark and Java and data science with numpy and Tensorflow most recently. However, I have found that no matter what language or part of the stack I work on, my talents and interests almost invariably come back to data and analytics. Whether it is learning a new theoretical data structure, designing an interactive data visualization with D3.js, creating a streaming data pipeline with Flink and Kafka, or building a predictive model with XGBoost and neural networks, I fundamentally both enjoy learning about and working with data. The computer science courses that I have taken have given me a strong background in CS fundamentals and machine learning. Additionally, my many courses in the liberal arts have enabled me to communicate clearly and convincingly in both English and Spanish. 
+                        </p>
+                        	 
+
+                        <p>
+                        <br> </br>
+                        <b> My Work</b>
+                       
+                        <br> </br>
+
+                        The majority of my projects and contributions are open-source and on GitHub. You can also see my data science results on Kaggle by <a href="https://www.kaggle.com/isaacmg"> clicking here </a>. Additionally, I have written many articles both on Medium (under the PaddleSoft account) and LinkedIn.
+                        </p>
+                         <br></br>
+                         <p>
+
+                          Feel free to <a href="#contact"> contact me </a> regarding opportunities, networking, my projects/PaddleSoft, or just to discuss technology in general. 
+                          </p>
                 </div>
             </div>
         </div>
@@ -87,14 +108,14 @@
                 <h3>PaddleSoft</h3>
                 <h4>Founder</h4>
                 <p>
-                    I founded PaddleSoft in order to help paddlers plan their whitewater adventures. Over the course of the last two years I have created many paddling related projects. Some of my favorites included using D3.js, NodeJS, and Kafka to build a <a href="http://rivermaps.herokuapp.com"> real time river flow map </a>, using Neo4j and CQL queries to to reccomend rivers and paddling partners to our users, and using MATLAB to create a time series neural network to predict the flow of the Kenduskeag stream. More details can be found below in the project section of this page and on the <a href="https://medium.com/@paddlesoft"> PaddleSoft blog </a>. All blog entries are written by myself unless otherwise noted.
+                    I founded PaddleSoft in order to help paddlers plan their whitewater adventures. Over the course of the last two years I have created many paddling related services for paddlers. Some of my favorites included using D3.js, NodeJS, and Kafka to build a <a href="http://rivermaps.herokuapp.com"> real time river flow map </a>, using Neo4j and CQL queries to to reccomend rivers and paddling partners to our users, and using MATLAB to create a time series neural network to predict the flow of the Kenduskeag stream. More details can be found below in the project section of this page and on the <a href="https://medium.com/@paddlesoft"> PaddleSoft blog </a>. All blog entries are written by myself unless otherwise noted.
                 </p>
             </div>
             <div data-date="June 2016 – January 2017">
                 <h3>Eastern Maine Medical Center</h3>
                 <h4>Data Analyst Intern</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    I assisted the Data Analytics team at EMMC during the summer months (June-August) and over the winter break (December-January). I analyzed a variety of data including both patient and financial data. I used various tools such as SQL and Altova MapForce to extract transform and load data (ETL) and then created data visualizations. 
                 </p>
             </div>
 
@@ -102,7 +123,7 @@
                 <h3>Eastern Maine Health Services</h3>
                 <h4>IT Intern</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    I collaborated with HR in order to develop and fine-tune HRIS systems. A few of my tasks included analyzing LAWSON reports with Excel, using SQL and Microsoft Access to automate Affordable Care Act and COBRA reporting, creating custom Excel functions and Macros with VB, and collaborating with a larger team in the implementation of manager self-service.
                 </p>
             </div>
 
@@ -110,7 +131,7 @@
                 <h3>University of Maine</h3>
                 <h4>Research Assistant</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    I conducted  research for the University of Maine Chemistry department. I worked mainly on computer modeling of tungsten-oxide molecules. Specifically, I wrote bash scripts in order to run jobs on the univeristy supercomputer. The overall goal of my team was to simulate chemical reactions and the formation of chemical compounds. 
                 </p>
             </div>
         </div>
@@ -158,7 +179,7 @@
             <b> Extracurriculars </b>
             <ul>
             <li>
-                    Club President of Brazilian Jiu-Jitsu (2015-present)
+                    President of Brazilian Jiu-Jitsu (2015-present)
                 </li>
                 <li>
                     Founder/President Brandeis Whitewater Paddlers (2014-present)
@@ -168,7 +189,7 @@
                     Member Krav Maga (2013-present)
                 </li>
                  <li>
-                    Brandeis Ice Hockey Club Member (2013-2016)
+                    Member Brandeis Ice Hockey Club  (2013-2016)
                 </li>
                 <li>
                     Member Conservative/Libertarian club (2013-2015)
@@ -189,13 +210,13 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/cao.png" height=300px width=300px />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Facebook Scraping and Analysis engine</h3>
+                        <h3> <b> Facebook Scraping and Analysis engine </b></h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            This is a project to automate scraping of Facebook data. The end goal is create a continous scraping and analysis engine of posts from Facebook groups and pages. For the purposes of PaddleSoft we want to use it to extract information about which rivers people are paddling, records of trip, and flow information about rivers that do not have gauges. However, we are working very hard to make our solution generalizable to anyone who wishes to extract meaningful information from Facebook.
                         </p>
                         <a href="https://github.com/isaacmg/fb_scraper">View Project</a>
                     </div>
@@ -205,15 +226,15 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="https://cdn-images-1.medium.com/max/800/1*k0o2G0XRyJW2DHcjfyUO-A.png" height=200px width=300px />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Kenduskeag Stream Flow Prediction/h3>
+                        <h3> <b> Kenduskeag Stream Flow Prediction </b></h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            This was a project I originally undertook in 2016 in order to predict the flow of the Kenduskeag stream. This involved many components such as initially collecting flow and weather data in a PostgreSQL database, training a time series neural network (NARX) to predict flow in MATLAB, and finally displaying the predictions in ChartJS. Unfortunately, as you may know, MATLAB is not easily deployable and closed source as such I do not have a working demo at the moment. However, I'm working at recreating our model in Python for both the Kenduskeag and other streams as well. In the process, I hope to make meaningful contributions and provide valuable insights to Python frameworks like PyFlux and PyNeurGen.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://medium.com/@paddlesoft/forecasting-the-flow-of-the-kenduskeag-a731c5d35aa6">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
