images + third description
other

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I'm looking for opportunites in the areas of Software Engineering and Data Science. In particular, I'm interested in using machine learning and using big data analytics to solve real world problems. <br></br>
+                        I'm looking for opportunites in the areas of Software Engineering and Data Science. In particular, I'm interested in using machine learning and big data analytics to solve real world problems. I have created this site as my expanded portfolio where I describe my work in detail. If you want just the highlights please download my resume above. <br></br>
 
                         <b> Background </b> 
                         <br></br>
@@ -179,20 +179,20 @@
             <b> Extracurriculars </b>
             <ul>
             <li>
-                    President of Brazilian Jiu-Jitsu (2015-present)
+                    President of Brandeis Brazilian Jiu-Jitsu (2015-present)
                 </li>
                 <li>
                     Founder/President Brandeis Whitewater Paddlers (2014-present)
                 </li>
          
                 <li>
-                    Member Krav Maga (2013-present)
+                    Member Brandeis Krav Maga (2013-present)
                 </li>
                  <li>
                     Member Brandeis Ice Hockey Club  (2013-2016)
                 </li>
                 <li>
-                    Member Conservative/Libertarian club (2013-2015)
+                    Member Brandeis Conservative/Libertarian club (2013-2015)
                 </li>
 
                 </ul>
@@ -210,7 +210,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/cao.png" height=300px width=300px />
+                        <img src="https://isaacmg.github.io/images/cao.PNG" height=300px width=300px />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -235,6 +235,20 @@
                             This was a project I originally undertook in 2016 in order to predict the flow of the Kenduskeag stream. This involved many components such as initially collecting flow and weather data in a PostgreSQL database, training a time series neural network (NARX) to predict flow in MATLAB, and finally displaying the predictions in ChartJS. Unfortunately, as you may know, MATLAB is not easily deployable and closed source as such I do not have a working demo at the moment. However, I'm working at recreating our model in Python for both the Kenduskeag and other streams as well. In the process, I hope to make meaningful contributions and provide valuable insights to Python frameworks like PyFlux and PyNeurGen.
                         </p>
                         <a href="https://medium.com/@paddlesoft/forecasting-the-flow-of-the-kenduskeag-a731c5d35aa6">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                  <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="https://isaacmg.github.io/images/granb.png" height=200px width=300px />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3> <b> ACA Penobscot Whitewater Nationals Team Competition</b></h3>
+                        <p>
+                            This is a Ruby on Rails application that I built on request for a friend/race coordinator of the ACA nationals. Essentially he wanted an application where racers in the compeition could form teams and earn points for their respective teams. So I built a simple ROR application where users could sign-up, browse teams, and join teams. The application used Devise for the authentication system and a PostgreSQL database for storing team data. Over time I added more features such as Facebook login and ways for teams filter/search for prespective members. It is still online at the below link. 
+                        </p>
+                        <a href="http://glacial-shelf-92818.herokuapp.com">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
