--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Isaac McKillen-Godfried</h1>
             <h2>Software Engineer and Data Scientist</h2>
-            <a href="/resume.pdf" class="btn-rounded-white">Download Resume</a>
+            <a href="resume.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -210,7 +210,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="https://isaacmg.github.io/images/cao.PNG" height=300px width=300px />
+                        <img src="https://isaacmg.github.io/images/cao.PNG" height=300px width=350px />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -226,7 +226,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="https://cdn-images-1.medium.com/max/800/1*k0o2G0XRyJW2DHcjfyUO-A.png" height=200px width=300px />
+                        <img src="https://cdn-images-1.medium.com/max/800/1*k0o2G0XRyJW2DHcjfyUO-A.png" height=300px width=350px />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -240,13 +240,13 @@
                 </div>
                   <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="https://isaacmg.github.io/images/granb.png" height=200px width=300px />
+                        <img src="https://isaacmg.github.io/images/granb.PNG" height=280px width=350px />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3> <b> ACA Penobscot Whitewater Nationals Team Competition</b></h3>
+                        <h3> <b> ACA Whitewater Nationals Team Competition </b></h3>
                         <p>
-                            This is a Ruby on Rails application that I built on request for a friend/race coordinator of the ACA nationals. Essentially he wanted an application where racers in the compeition could form teams and earn points for their respective teams. So I built a simple ROR application where users could sign-up, browse teams, and join teams. The application used Devise for the authentication system and a PostgreSQL database for storing team data. Over time I added more features such as Facebook login and ways for teams filter/search for prespective members. It is still online at the below link. 
+                            This is a Ruby on Rails application that I built on request for a friend/race coordinator of the ACA nationals. Essentially he wanted an application where racers in the compeition could form teams and earn points for their respective teams. So I built a simple ROR application where users could sign-up, browse teams, and join teams. The application used Devise for the authentication system and a PostgreSQL database for storing team data. Gradually, I added more features such as Facebook login and ways for teams filter/search for prespective members. It is still online at the below link. 
                         </p>
                         <a href="http://glacial-shelf-92818.herokuapp.com">View Project</a>
                     </div>
