--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     <div class="project-info">
                         <h3> <b> ACA Whitewater Nationals Team Competition </b></h3>
                         <p>
-                            This is a Ruby on Rails application that I built on request for a friend/race coordinator of the ACA nationals. Essentially he wanted an application where racers in the compeition could form teams and earn points for their respective teams. So I built a simple ROR application where users could sign-up, browse teams, and join teams. The application used Devise for the authentication system and a PostgreSQL database for storing team data. Gradually, I added more features such as Facebook login and ways for teams filter/search for prespective members. It is still online at the below link.
+                            This is a Ruby on Rails application that I built on request for a friend/race coordinator of the ACA nationals. Essentially he wanted an application where racers in the compeition could form teams and earn points for their respective teams. So I built a simple ROR application where users could sign-up, browse teams, and join teams. The application used Devise for the authentication system and a PostgreSQL database for storing team data. Gradually, I added more features such as Facebook login and ways for teams to filter/search for prespective members. It is still online at the below link.
                         </p>
                         <a href="http://glacial-shelf-92818.herokuapp.com">View Project</a>
                     </div>
@@ -289,7 +289,7 @@
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/igodfrie@brandes.edu">
+            <form method="POST" action="https://formspree.io/igodfrie@brandeis.edu">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
@@ -334,21 +334,22 @@
                 </div>
             </div>
         </div>
-        <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-63655547-5', 'auto');
-  ga('send', 'pageview');
-
-</script>
     </footer>
     <!-- End footer -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/scripts.min.js"></script>
+    <script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-63655547-5', 'auto');
+ga('send', 'pageview');
+
+</script>
 </body>
 
 </html>
