--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
+            <div data-date="May 2014 – August 2014">
                 <h3>Eastern Maine Health Services</h3>
                 <h4>IT Intern</h4>
                 <p>
@@ -127,7 +127,7 @@
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
+            <div data-date="May 2012 – August 2013">
                 <h3>University of Maine</h3>
                 <h4>Research Assistant</h4>
                 <p>
@@ -167,13 +167,18 @@
                 </li>
                 <li>
                 	Structure and Interpretation of Computer Programs
-
                 </li>
                 <li>
                     Quantum Mechanics
                 </li>
                 <li>
                     Waves and Oscillations
+                </li>
+                <li>
+                   Calculus III (transferred from UMaine)
+                </li>
+                 <li>
+                   Introduction to C++ (transferred from UMaine)
                 </li>
             </ul>
             <b> Extracurriculars </b>
@@ -214,7 +219,7 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3> <b> Facebook Scraping and Analysis engine </b></h3>
+                        <h3> <b> FBLYZE: A Facebook Scraping and Analysis Engine </b></h3>
                         <p>
                             This is a project to automate scraping of Facebook data. The end goal is create a continous scraping and analysis engine of posts from Facebook groups and pages. For the purposes of PaddleSoft we want to use it to extract information about which rivers people are paddling, records of trip, and flow information about rivers that do not have gauges. However, we are working very hard to make our solution generalizable to anyone who wishes to extract meaningful information from Facebook.
                         </p>
