--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
                         <br> </br>
 
-                        The majority of my projects and contributions are open-source and on GitHub. You can also see my data science results on Kaggle by <a href="https://www.kaggle.com/isaacmg"> clicking here </a>. Additionally, I have written many articles both on Medium (under the PaddleSoft account) and LinkedIn.
+                        The majority of my projects and contributions are open-source and on GitHub. I'm currently a Kaggle expert and ranked in the top 4% of all data scientists on Kaggle. You can also see my data science results on Kaggle by <a href="https://www.kaggle.com/isaacmg"> clicking here </a>. Additionally, I have written many articles both on Medium (under the PaddleSoft account) and LinkedIn.
                         </p>
                          <br></br>
                          <p>
@@ -255,6 +255,19 @@
                         </p>
                         <a href="http://glacial-shelf-92818.herokuapp.com">View Project</a>
                     </div>
+                  </div>
+                    <div class="project shadow-large">
+                        <div class="project-image">
+                            <img src="https://isaacmg.github.io/images/river_vis.png" height=300px width=350px />
+                        </div>
+                    <div class="project-info">
+                        <h3> <b> River visualizations </b></h3>
+                        <p>
+                            A realtime map of river flows across America that renders a graph of the river's flow information when selected. It also, queries our whitewater search engine for results on the selected river.
+                        </p>
+                        <a href="http://rivermaps.herokuapp.com">View Project</a>
+                    </div>
+
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
