--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
                         <br> </br>
 
-                        The majority of my projects and contributions are open-source and on GitHub. I'm currently a Kaggle expert and ranked in the top 4% of all data scientists on Kaggle. You can also see my data science results on Kaggle by <a href="https://www.kaggle.com/isaacmg"> clicking here </a>. Additionally, I have written many articles both on Medium (under the PaddleSoft account) and LinkedIn.
+                        The majority of my projects and contributions are open-source and on GitHub. I'm currently a Kaggle expert and ranked in the top 4% of all data scientists on Kaggle. You can also see my data science results on Kaggle by <a href="https://www.kaggle.com/isaacmg"> clicking here </a>. Additionally, I have written many articles both on Medium, published in Towards Data Science and in PaddleSoft engineering, and LinkedIn.
                         </p>
                          <br></br>
                          <p>
