--- a/index.html
+++ b/index.html
@@ -261,9 +261,9 @@
                             <img src="https://isaacmg.github.io/images/river_vis.png" height=300px width=350px />
                         </div>
                     <div class="project-info">
-                        <h3> <b> River visualizations </b></h3>
+                        <h3> <b> American river visualizations </b></h3>
                         <p>
-                            A realtime map of river flows across America that renders a graph of the river's flow information when selected. It also, queries our whitewater search engine for results on the selected river.
+                            A realtime map of river flows across America that renders a graph of the river's flow information when selected. It also, queries our whitewater search engine (built in ElasticSearch) for results on the selected river.
                         </p>
                         <a href="http://rivermaps.herokuapp.com">View Project</a>
                     </div>
@@ -294,9 +294,9 @@
             <li>NodeJS</li>
             <li>ElasticSearch</li>
             <li>Amazon Web Services</li>
+            <li>Google Cloud </li>
             <li>Git</li>
             <li>Docker</li>
-            <li>Jira</li>
             <li>Codecov</li>
         </ul>
 
