--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <h3>Eastern Maine Medical Center</h3>
                 <h4>Data Analyst Intern</h4>
                 <p>
-                    I assisted the Data Analytics team at EMMC during the summer months (June-August) and over the winter break (December-January). I analyzed a variety of data including both patient and financial data. I used various tools such as SQL and Altova MapForce to extract, transform, and load data (ETL) and then created data visualizations.
+                    I assisted the data analytics team at EMMC during the summer months (June-August) and over the winter break (December-January). I analyzed a variety of data including both patient and financial data. I used various tools such as SQL and Altova MapForce to extract, transform, and load data (ETL) and then created data visualizations.
                 </p>
             </div>
 
@@ -261,9 +261,9 @@
                             <img src="https://isaacmg.github.io/images/river_vis.png" height=300px width=350px />
                         </div>
                     <div class="project-info">
-                        <h3> <b> American river visualizations </b></h3>
+                        <h3> <b> U.S. rivers flow map  </b></h3>
                         <p>
-                            A realtime map of river flows across America that renders a graph of the river's flow information when selected. It also, queries our whitewater search engine (built in ElasticSearch) for results on the selected river.
+                            A realtime map of river flows across America that renders a graph of the river's flow information when selected. It also, queries our whitewater search engine for results on the selected river. The project uses ElasticSearch (for search results), NodeJS, D3.js, and SocketIO.
                         </p>
                         <a href="http://rivermaps.herokuapp.com">View Project</a>
                     </div>
@@ -297,7 +297,7 @@
             <li>Google Cloud </li>
             <li>Git</li>
             <li>Docker</li>
-            <li>Codecov</li> 
+            <li>Codecov</li>
         </ul>
 
     </div>
