--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
  }
  @media screen and (min-width: 0px) and (max-width: 720px) {
   #feed { display: none; }
-  #calendar { display: none; }
+  .calendar { display: none; }
 }
  #padding {
     width: 700px;
