--- a/index.html
+++ b/index.html
@@ -33,8 +33,6 @@
 
     </style>
 <script src="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.min.js"></script>
-
-<!-- Optionally, include the theme (if you don't want to struggle to write the CSS) -->
 <link rel="stylesheet" href="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.css"/>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -130,7 +128,7 @@
 
                         <br> </br>
 
-                        The majority of my projects and contributions are open-source and on GitHub. I'm currently a Kaggle expert and ranked in the top 4% of all data scientists on Kaggle. You can also see my data science results on Kaggle by <a href="https://www.kaggle.com/isaacmg"> clicking here </a>. Additionally, I have written many articles both on Medium, published in Towards Data Science and in PaddleSoft engineering, and LinkedIn.
+                        The majority of my projects and contributions are open-source and on GitHub. I'm currently a Kaggle competitions expert and ranked in the top 5% of all data scientists on Kaggle. You can also see my data science results on Kaggle by <a href="https://www.kaggle.com/isaacmg"> clicking here </a>. Additionally, I have written many articles both on Medium, published in Towards Data Science and in PaddleSoft engineering, and LinkedIn.
                         </p>
                          <br></br>
                          <p>
@@ -159,7 +157,7 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-        	<div data-date="June 2014 – Present">
+        	<div data-date="June 2015 – Present">
                 <h3>PaddleSoft</h3>
                 <h4>Founder</h4>
                 <p>
@@ -349,7 +347,7 @@
             <li>NodeJS</li>
             <li>ElasticSearch</li>
             <li>Amazon Web Services</li>
-            <li>Google Cloud </li>
+            <li>Google Cloud Engine</li>
             <li>Git</li>
             <li>Docker</li>
             <li>Codecov</li>
