Updated end dates

--- a/index.html
+++ b/index.html
@@ -237,14 +237,14 @@
             <b> Extracurriculars </b>
             <ul>
             <li>
-                    President of Brandeis Brazilian Jiu-Jitsu (2015-present)
+                    President of Brandeis Brazilian Jiu-Jitsu (2015-2017)
                 </li>
                 <li>
-                    Founder/President Brandeis Whitewater Paddlers (2014-present)
+                    Founder/President Brandeis Whitewater Paddlers (2014-2017)
                 </li>
 
                 <li>
-                    Member Brandeis Krav Maga (2013-present)
+                    Member Brandeis Krav Maga (2013-2017)
                 </li>
                  <li>
                     Member Brandeis Ice Hockey Club  (2013-2016)
