--- a/index.html
+++ b/index.html
@@ -164,9 +164,11 @@
                     I founded PaddleSoft in order to help paddlers plan their whitewater adventures. Over the course of the last two years I have created many paddling related services for paddlers. Some of my favorites included using D3.js, NodeJS, and Kafka to build a <a href="http://rivermaps.herokuapp.com"> real time river flow map </a>, using <a href="https://medium.com/@paddlesoft/building-a-recommendation-engine-with-neo4j-part-1-simple-graph-based-approaches-16c3cea32ff"> Neo4j and CQL queries to to recommend rivers </a>  and paddling partners to our users , and using MATLAB to create a time series neural network to predict the flow of the Kenduskeag stream. More details can be found below in the project section of this page and on the <a href="https://medium.com/@paddlesoft"> PaddleSoft blog </a>. All blog entries are written by myself unless otherwise noted.
                 </p>
             </div>
-            <div data-date="June 2016 – January 2017">
+            <div data-date="June 2016 – Present">
                 <h3>Eastern Maine Medical Center</h3>
-                <h4>Data Analyst Intern</h4>
+                <h4> Data Analyst (July 2017-Present)</h4>
+
+                <h4>Data Analyst Intern (June 2016-July 2017)</h4>
                 <p>
                     I assisted the data analytics team at EMMC during the summer months (June-August) and over the winter break (December-January). I analyzed a variety of data including both patient and financial data. I used various tools such as SQL and Altova MapForce to extract, transform, and load data (ETL) and then created data visualizations.
                 </p>
