--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
             <div data-date="June 2016 – Present">
                 <h3>Eastern Maine Medical Center</h3>
                 <h4> Data Analyst (July 2017-Present)</h4>
+                 I design interactive charts with Bokeh in Python for hospital administrators and doctors, create ETL pipelines to pull data from the hospital's decentralized data sources such as Cerner, "side" SQL databases, and manually maintained Excel notebooks. Finally, I'm working on a "modern" data architecture in order to automate tedious processes and provide realtime analytics for clients.
 
                 <h4>Data Analyst Intern (June 2016-July 2017)</h4>
                 <p>
