--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <h3>Eastern Maine Medical Center</h3>
                 <h4> Data Analyst (July 2017-Present)</h4>
                 <p>
-                 I design interactive charts with Bokeh in Python for hospital administrators and doctors, create ETL pipelines to pull data from the hospital's decentralized data sources such as Cerner, "side" SQL databases, and manually maintained Excel notebooks. Finally, I'm also working on a "modern" data architecture in order to automate tedious processes and provide realtime analytics for clients.
+                 I design interactive charts with Bokeh in Python for hospital administrators and doctors, create ETL pipelines to pull data from the hospital's decentralized data sources (such as Cerner, "side" SQL databases, and manually maintained Excel notebooks). Finally, I'm also working on a "modern" data architecture built on Kafka and PostgreSQL in order to automate tedious manual processes and provide realtime analytics for clients.
                </p>
                 <h4>Data Analyst Intern (June 2016-July 2017)</h4>
                 <p>
@@ -295,7 +295,7 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3> <b> Kenduskeag Stream Flow Prediction </b></h3>
+                        <h3> <b> Kenduskeag Stream Flow Prediction </b></h3>eeeefr
                         <p>
                             This was a project I originally undertook in 2016 in order to predict the flow of the Kenduskeag stream in Bangor ME. This involved many components including initially collecting flow and weather data in a PostgreSQL database, training a time series neural network (NARX) to predict flow in MATLAB, and finally displaying the predictions in ChartJS. Unfortunately, as you may know, MATLAB is not easily deployable and closed source; as such I do not have a working demo at the moment. However, I'm working at recreating our model in Python for both the Kenduskeag and other streams as well. In the process, I hope to make meaningful contributions and provide valuable insights to Python frameworks like PyFlux and PyNeurGen.
                         </p>
@@ -312,7 +312,7 @@
                         <h3> <b> ACA Whitewater Nationals Team Competition </b></h3>
                         <p>
                             This is a Ruby on Rails application that I built on request for a friend/race coordinator of the ACA nationals. He wanted an application where racers in the compeition could form teams and earn points for their respective teams. So I built a simple ROR application where users could sign-up, browse teams, and join teams. The application used Devise for the authentication system and a PostgreSQL database for storing team data. Gradually, I added more features such as Facebook login and ways for teams to filter/search for prespective members. It is still online at the below link (though some of the links are now stale). Code is also availible on my GitHub.
-                        </p>
+                        </p>tm, mngn kgergj
                         <a href="http://glacial-shelf-92818.herokuapp.com">View Project</a>
                     </div>
                   </div>
@@ -351,6 +351,7 @@
             <li>Kafka</li>
             <li>Airflow</li>
             <li>Ruby on Rails</li>
+            <li>PyTorch</li>
             <li>NodeJS</li>
             <li>ElasticSearch</li>
             <li>Amazon Web Services</li>
