--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I'm looking for opportunites in the areas of Software Engineering and Data Science. In particular, I'm interested in using machine learning and big data analytics to solve real world problems. I have created this site as my expanded portfolio where I describe my work in detail. If you want just the highlights please download my resume above. <br></br>
+                        I'm looking for opportunites in the areas of Data Science and Machine Learning. In particular, I'm interested in using machine learning and big data analytics to solve real world problems. I have created this site as my expanded portfolio where I describe my work in detail. If you want just the highlights please download my resume above. <br></br>
 
                         <b> Background </b>
                         <br></br>
@@ -160,6 +160,25 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
+          <div data-date="June 2016 – Present">
+              <h3>Eastern Maine Medical Center</h3>
+              <h4> Data Analyst (July 2017-Present)</h4>
+              <p>
+               I design interactive charts with Bokeh in Python for hospital administrators and doctors, create ETL pipelines to pull data from the hospital's decentralized data sources (such as Cerner, "side" SQL databases, and manually maintained Excel notebooks), and employ data driven approaches to improve hospital performance. Finally, I'm also working on a "modern" data architecture built on Kafka and PostgreSQL in order to automate tedious manual processes and provide realtime analytics for clients.
+             </p>
+              <h4>Data Analyst Intern (June 2016-July 2017)</h4>
+              <p>
+                  I assisted the data analytics team at EMMC during the summer months (June-August) and over the winter break (December-January). I analyzed a variety of data including both patient and financial data. I used various tools such as SQL and Altova MapForce to extract, transform, and load data (ETL) and then created data visualizations.
+              </p>
+          </div>
+
+          <div data-date="May 2014 – August 2014">
+              <h3>Eastern Maine Health Services</h3>
+              <h4>IT Intern</h4>
+              <p>
+                  I collaborated with HR in order to develop and fine-tune HRIS systems. A few of my tasks included analyzing LAWSON reports with Excel, using SQL and Microsoft Access to automate Affordable Care Act and COBRA reporting, creating custom Excel functions and Macros with VB, and collaborating with a larger team in the implementation of manager self-service.
+              </p>
+          </div>
         	<div data-date="June 2015 – Present">
                 <h3>PaddleSoft</h3>
                 <h4>Founder</h4>
@@ -167,25 +186,7 @@
                     I founded PaddleSoft in order to help paddlers plan their whitewater adventures. Over the course of the last two years I have created many paddling related services for paddlers. Some of my favorites included using D3.js, NodeJS, and Kafka to build a <a href="http://rivermaps.herokuapp.com"> real time river flow map </a>, using <a href="https://medium.com/@paddlesoft/building-a-recommendation-engine-with-neo4j-part-1-simple-graph-based-approaches-16c3cea32ff"> Neo4j and CQL queries to to recommend rivers </a>  and paddling partners to our users , and using MATLAB to create a time series neural network to predict the flow of the Kenduskeag stream. More details can be found below in the project section of this page and on the <a href="https://medium.com/@paddlesoft"> PaddleSoft blog </a>. All blog entries are written by myself unless otherwise noted.
                 </p>
             </div>
-            <div data-date="June 2016 – Present">
-                <h3>Eastern Maine Medical Center</h3>
-                <h4> Data Analyst (July 2017-Present)</h4>
-                <p>
-                 I design interactive charts with Bokeh in Python for hospital administrators and doctors, create ETL pipelines to pull data from the hospital's decentralized data sources (such as Cerner, "side" SQL databases, and manually maintained Excel notebooks). Finally, I'm also working on a "modern" data architecture built on Kafka and PostgreSQL in order to automate tedious manual processes and provide realtime analytics for clients.
-               </p>
-                <h4>Data Analyst Intern (June 2016-July 2017)</h4>
-                <p>
-                    I assisted the data analytics team at EMMC during the summer months (June-August) and over the winter break (December-January). I analyzed a variety of data including both patient and financial data. I used various tools such as SQL and Altova MapForce to extract, transform, and load data (ETL) and then created data visualizations.
-                </p>
-            </div>
 
-            <div data-date="May 2014 – August 2014">
-                <h3>Eastern Maine Health Services</h3>
-                <h4>IT Intern</h4>
-                <p>
-                    I collaborated with HR in order to develop and fine-tune HRIS systems. A few of my tasks included analyzing LAWSON reports with Excel, using SQL and Microsoft Access to automate Affordable Care Act and COBRA reporting, creating custom Excel functions and Macros with VB, and collaborating with a larger team in the implementation of manager self-service.
-                </p>
-            </div>
 
             <div data-date="May 2012 – August 2013">
                 <h3>University of Maine</h3>
@@ -295,7 +296,7 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3> <b> Kenduskeag Stream Flow Prediction </b></h3>eeeefr
+                        <h3> <b> Kenduskeag Stream Flow Prediction </b></h3>
                         <p>
                             This was a project I originally undertook in 2016 in order to predict the flow of the Kenduskeag stream in Bangor ME. This involved many components including initially collecting flow and weather data in a PostgreSQL database, training a time series neural network (NARX) to predict flow in MATLAB, and finally displaying the predictions in ChartJS. Unfortunately, as you may know, MATLAB is not easily deployable and closed source; as such I do not have a working demo at the moment. However, I'm working at recreating our model in Python for both the Kenduskeag and other streams as well. In the process, I hope to make meaningful contributions and provide valuable insights to Python frameworks like PyFlux and PyNeurGen.
                         </p>
@@ -312,7 +313,7 @@
                         <h3> <b> ACA Whitewater Nationals Team Competition </b></h3>
                         <p>
                             This is a Ruby on Rails application that I built on request for a friend/race coordinator of the ACA nationals. He wanted an application where racers in the compeition could form teams and earn points for their respective teams. So I built a simple ROR application where users could sign-up, browse teams, and join teams. The application used Devise for the authentication system and a PostgreSQL database for storing team data. Gradually, I added more features such as Facebook login and ways for teams to filter/search for prespective members. It is still online at the below link (though some of the links are now stale). Code is also availible on my GitHub.
-                        </p>tm, mngn kgergj
+                        </p>
                         <a href="http://glacial-shelf-92818.herokuapp.com">View Project</a>
                     </div>
                   </div>
@@ -404,7 +405,7 @@
                             <a href="https://www.linkedin.com/in/isaac-godfried-70874466/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.medium.com/@paddlesoft" target="_blank"><i class="fa fa-medium" aria-hidden="true"></i></a>
+                            <a href="https://www.medium.com/@igodfried" target="_blank"><i class="fa fa-medium" aria-hidden="true"></i></a>
                         </li>
                         <li>
                             <a href="https://angel.co/isaac-godfried" target="_blank"><i class="fa fa-angellist" aria-hidden="true"></i></a>
