--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
     </div>
     <!-- End #experience -->
 
+
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
@@ -269,9 +270,34 @@
         <!-- End .education-block -->
     </div>
     <!-- End #education -->
+    <div id="projects" class="background-alt">
+      <div id="writing"> </div>
+      <h2 class="heading"> Writing </h2>
+      <div class="container" style="background-color:white">
+        <h3> Blog posts </h3>
+        <ul style="display:inline-block;text-align:left;">
+        <li> Medical Imaging Meets NIPS: A Summary </li>
+        <li> Overarching trends and application at NIPS (with links!)</li>
+        <li> Complex event processing with Flink </li>
+        <li> Computer Vision in Sports</li>
+        <li> Computer Vision in Sports</li>
+      </ul>
+        <h3> Workshops/Preprints (Non-Archival)</h3>
+        <ul class="text-left" style="display:inline-block;vertical-align:middle;">
+          <li>
+            <p>
+            <a href="https://www.doc.ic.ac.uk/~bglocker/public/mednips2017/med-nips_2017_paper_22.pdf">
+            CNN based techniques for diagnosing multiple conditions in Chest X-Rays </a> </p>
+
+          </li>
+          </ul>
+
+      </div>
+
+    </div>
 
     <div id="projects" class="background-alt">
-        <h2 class="heading">Projects</h2>
+        <h2 class="heading">Open Source Projects</h2>
         <div class="container">
             <div class="row">
                 <div class="project shadow-large">
