--- a/index.html
+++ b/index.html
@@ -276,11 +276,11 @@
       <div class="container" style="background-color:white">
         <h3> Blog posts </h3>
         <ul style="display:inline-block;text-align:left;">
-        <li> Medical Imaging Meets NIPS: A Summary </li>
+        <li> Medical Imaging Meets NIPS: A Summary</li>
         <li> Overarching trends and application at NIPS (with links!)</li>
         <li> Complex event processing with Flink </li>
         <li> Computer Vision in Sports</li>
-        <li> Computer Vision in Sports</li>
+        <li> Building a NARX in MATLAB to forecast time series data </li>
       </ul>
         <h3> Workshops/Preprints (Non-Archival)</h3>
         <ul class="text-left" style="display:inline-block;vertical-align:middle;">
