--- a/index.html
+++ b/index.html
@@ -285,10 +285,8 @@
         <h3> Workshops/Preprints (Non-Archival)</h3>
         <ul class="text-left" style="display:inline-block;vertical-align:middle;">
           <li>
-            <p>
             <a href="https://www.doc.ic.ac.uk/~bglocker/public/mednips2017/med-nips_2017_paper_22.pdf">
-            CNN based techniques for diagnosing multiple conditions in Chest X-Rays </a> </p>
-
+            CNN based techniques for diagnosing multiple conditions in Chest X-Rays </a>
           </li>
           </ul>
 
